src/test/ui/mismatched_types/numeric-literal-cast.stderr
error[E0308]: mismatched types
  --> $DIR/numeric-literal-cast.rs:6:9
   |
LL |     foo(1u8);
   |         ^^^ expected u16, found u8
help: change the type of the numeric literal from `u8` to `u16`
   |
LL |     foo(1u16);
   |         ^^^^

error[E0308]: mismatched types
  --> $DIR/numeric-literal-cast.rs:8:10
   |
LL |     foo1(2f32);
   |          ^^^^ expected f64, found f32
help: change the type of the numeric literal from `f32` to `f64`
   |
LL |     foo1(2f64);
   |          ^^^^

error[E0308]: mismatched types
  --> $DIR/numeric-literal-cast.rs:10:10
   |
LL |     foo2(3i16);
   |          ^^^^ expected i32, found i16
help: change the type of the numeric literal from `i16` to `i32`
   |
LL |     foo2(3i32);
   |          ^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
